feat: Fix sharp build error on Vercel
Removes the `postinstall` script that rebuilds sharp and removes sharp from `pnpm.onlyBuiltDependencies`.

This prevents sharp from being built from source on Vercel's Linux environment, allowing it to use the pre-compiled binary from `@img/sharp-linux-x64` and resolving the runtime error.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "dev": "next dev",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint",
-    "postinstall": "npm rebuild sharp"
+    "lint": "eslint"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -45,8 +44,7 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "canvas",
-      "sharp"
+      "canvas"
     ]
   },
   "optionalDependencies": {
