feat: Implement core functionalities for Nano Banana AI Image Generation Studio
- Removed the existing Product Requirements Document (prd.md).
- Added a new main documentation file (GEMINI.md) outlining the application structure, core functionalities, and technical stack.
- Created an API key dialog component for user input of Google AI API keys.
- Developed the main generation page to handle both text-to-image and image-to-image functionalities, including API key management.
- Introduced generation tabs to switch between text-to-image and image-to-image modes.
- Implemented header component for application branding.
- Built image-to-image form and tab components for user image uploads and prompt submissions.
- Created text-to-image form and tab components for text prompt submissions.
- Enhanced UI with Tailwind CSS for a modern look and feel.

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,18 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# project documentation
-prd.md
-*.md
+# AI Assistants
+.gemini/
+.claude/
+.cursor/
+.copilot/
+.vscode/settings.json
+.idea/
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Documentation
+docs/
+
